- 17/12/2022
07. wait.h: added wait_handler() and wait_exited macro
08. wait_handler.c: added wait_handler() function wrapper for handling wait
    status
- 02/01/2023
09. tls.c, tls.h: added tls/ssl functions
10. allwrite.c: added allwrite() function
11. commands.c: return -2 for command too long
12. ndelay.c: added ndelay() function to get value of DELAY flag for
    descriptor

* Thu 08 Sep 2022 03:42:16 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1.1-1.1%{?dist}
Release 1.1.1 Start 18/07/2021 End 08/09/2022
======= Release Highlights ================================================
o added libc replacements qgetservent, qgetservbyname, qgetservbyport along
  with re-entrant versions
o Support SCRAM-SHA1, SCRAM-SHA-256, SCRAM-SHA1-PLUS, SCRAM-SHA256-PLUS,
  auth methods
o Converted man pages to markdown for indimail wiki
===========================================================================
- 05/08/2021
01. added r_mkdir function
- 10/07/2021
02. qgetpwgr.c: added qgetserv.. functions to read /etc/services
- 11/07/2021
03. envdir.c: set variables from .envdir first to prevent .envdir from overriding
    main
- 12/07/2021
04. envdir.c: added feature to process .envfile and .envdir as a file
    containing list of directories
- 13/07/2021
05. envdir.c: return directory/filenames in error
- 14/07/2021
06. pathexec.[c,h]: added pathexec_clear() to clear env variables
07. envdir.c: refactored to remove use of chdir to traverse directories.
- 15/07/2021
08. str.h: fixed prototypes (str_chr, str_chrn, str_rchr) use const char '*'
- 16/07/2021
09. envdir.c: treat openreadclose returning 0 as an error
- 17/08/2021
10. configure.ac, qgetpwgr.c: added arpa/inet.h for htons()
- 21/08/2021
11. added no_of_days() function
- 24/08/2021
12. strerr.h, strerr_die.c, strerr_sys.c: added addtional members to struct
    strerr
13. added check_domain() function
- 29/08/2021
14. added noreturn.h for defining noreturn